--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "bitis"
 version = "0.1.0"
 edition = "2021"
+resolver = "2"
 
 [lib]
 name = "bitis_lib"
@@ -11,14 +12,14 @@ path = "src/lib.rs"
 name = "bitis"
 path = "src/main.rs"
 
-
 [dependencies]
 logos = "0.15.0"
 regex = "1.11.1"
 askama = "0.12"
-stringcase = "0.3.0"
+stringcase = "0.4.0"
 clap = { version = "4.5.30", features = ["derive"] }
+bitis-macros = { path = "./bitis-macros" }
 
 [dev-dependencies]
-rstest = "0.24.0"
+rstest = "0.25.0"
 
