--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "bitis"
 version = "0.5.0"
-edition = "2021"
-resolver = "2"
+edition = "2024"
+license = "MIT"
+keywords = ["interface", "serialization", "bitwise", "data description language"]
+description = "Bitwise serialization of messages defined in a data description language"
+readme = "README.md"
+homepage = "https://github.com/doheide/bitis"
+repository = "https://github.com/doheide/bitis"
+
 
 [lib]
 name = "bitis_lib"
@@ -17,7 +23,7 @@ logos = "0.15.0"
 regex = "1.11.1"
 askama = "0.12"
 stringcase = "0.4.0"
-clap = { version = "4.5.30", features = ["derive"] }
+clap = { version = "4.5.30", features = ["derive", "string", "cargo", "color", "help"] }
 bitis-macros = { path = "./bitis-macros" }
 
 [dev-dependencies]
