--- a/test_data/test/lib_lali/Cargo.toml
+++ b/test_data/test/lib_lali/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-name = "bitis_msgs"
+name = "lib_lali"
 version = "0.5.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "bitis_msgs"
+name = "lib_lali"
 crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = "0.24.0"
 bitis = { path = "../../.." }
-
