--- a/bitis-macros/Cargo.toml
+++ b/bitis-macros/Cargo.toml
@@ -3,7 +3,7 @@ name = "bitis-macros"
 version = "0.5.3"
 edition = "2024"
 license = "MIT"
-keywords = ["interface", "serialization", "bitwise", "data description language"]
+keywords = ["interface", "serialization", "bitwise", "DSL"]
 description = "Bitwise serialization of messages defined in a data description language"
 readme = "README.md"
 homepage = "https://github.com/doheide/bitis"
