--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ toml_edit = "0.22.24"
 # bitis-macros = "0.5.3"
 array-init = "2.1"
 ascii = "1.1.0"
+#bitis-macros = "0.7.0"
 bitis-macros = { path = "./bitis-macros" }
 
 
